added repo to presentation

--- a/deep_learning_para_el_procesado_de_imagenes.ipynb
+++ b/deep_learning_para_el_procesado_de_imagenes.ipynb
@@ -18,7 +18,10 @@
     "\n",
     "\n",
     "\n",
-    "**Ariel Rossanigo**\n"
+    "**Ariel Rossanigo**\n",
+    "\n",
+    "\n",
+    "git clone git@github.com:arielrossanigo/image_processing_with_deep_learning.git\n"
    ]
   },
   {
